css/pixyll.css
@charset "UTF-8";
/*

  Pixyll

  A simple, beautiful theme for Jekyll that emphasizes content rather than
  aesthetic fluff.

  Best served with BASSCSS (http://jxnblk.github.io/basscss)

  Crafted with <3 by John Otander (@4lpine) - ©2014 John Otander
  MIT License http://opensource.org/licenses/MIT

*/

body {
  font-family: "Merriweather", "PT Serif", Georgia, "Times New Roman", serif;
}

html, body {
  height: 100%;
}

img {
  width: 100%;
}

.site-wrap {
  min-height: 100%;
  margin-bottom: -100px;
}

.site-wrap:after {
  content: "";
  display: block;
}

.footer, .site-wrap:after {
  height: 100px;
}

body {
  font-size: 1.5rem;

          box-sizing: border-box;
     -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

.gist,
.gist .highlight .p {
  font-size: .75rem;
}

.gist .lines {
  width: 100%;
}

.site-header a {
  color: #CDC4B7;
  font-weight: 600;
  text-transform: uppercase;

}

.site-header nav a {
  font-size: 1.2rem;
  
}

p.twitter-notice {
  margin-top: 4rem;
  border-top: 1px solid #ccc;
  padding-top: 0.5rem;
  font-size: 1.1rem;
}

.post-content h3 {
  padding-top: 0.3rem;
  text-transform: uppercase;
  letter-spacing: 0.15rem;
  padding-bottom: 1.2rem;
  line-height: 2rem;
}

.site-header nav a:hover {
  color: #834E4E;
}

.site-nav a + a {
  margin-left: 1rem;
}

.site-nav {
  margin: 0;
  padding: 0;
}

.posts .post a:hover .post-title {
  text-decoration: underline;
}

.posts {
  margin: 0;
}

.posts .post {
  margin-bottom: 0rem;
  padding-bottom: 1rem;
  border-bottom: none;
}

.posts .post:last-child {
  padding-bottom: 0;
}

.post-link .post-title {
  margin-top: 0;
  font-weight: 800;
  color: #834E4E;
}

.pagination,
.button {
  font-size: 16px;
  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
  font-weight: 300;
  text-align: center;
}

.pagination a, .pagination .disabled {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background: #fafafa;
  border-radius: 0.1875em;
  border: 1px solid #f3f3f3;
  color: #333333;
  padding: 1rem 1.5rem;
}

.pagination .disabled {
  display: none;
}

.pagination a:hover, .pagination a:focus {
  background: white;
  color: #477dca;
}

.pagination a:active {
  background: #f7f7f7;
}

.wrap .measure {
  margin: 0 auto;
}

.meta,
.post-meta {
  width: auto;
  font-size: 1rem;
  font-weight: 600;
  margin: 0;
  padding: 0;
  color: rgba(0,0,0,0.35);
  font-family: "Raleway";
}

.pagination .button {
  font-size: 1rem;
  font-weight: 300;
  letter-spacing: 1px;
}

.button-disabled {
  opacity: 0.55;
  background-color: #999;
}

.button-disabled:hover,
.button-disabled:active,
.button-disabled:focus {
  cursor: not-allowed;
  background-color: #999;
}

form {
  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
  font-weight: 300;
  font-size: 1rem;
}

textarea.input {
  height: 8rem;
}

p {
  font-weight: 300;
  line-height: 1.95rem;
  color: #4d4943;
}

pre, code {
  font-family: Menlo, Monaco, "Courier New", monospace
}

code {
  color: #7a7a7a;
}

pre {
  padding: 1rem;
  font-size: 1.125rem;
  line-height: 1.25rem;
  overflow-x: scroll;
  margin-bottom: 1rem;
}

.highlight .p {
  font-size: 1.125rem;
  line-height: 1.125rem;
}

blockquote {
  padding: 0 1rem;

  border-left: 5px solid #ccc;
}

blockquote footer {
  font-size: .85rem;
  font-style: normal;
  background-color: #fff;
  color: #7a7a7a;
  border-color: transparent;
}

h1,
h2,
h3 {
  font-family: "Raleway", 'Helvetica Neue', Helvetica, sans-serif;
  margin-top: 0rem;
}

h1,
h2 {
  font-weight: 900;
}

h3 {
  font-weight: 700;
}

h4,
h5,
h6 {
  font-family: "Raleway", 'Helvetica Neue', Helvetica, sans-serif;
  font-weight: 900;
  margin-top: 1rem;
}

@media screen and (max-width: 48em) {
  .site-header {
    text-align: left;
    margin-bottom: 0.5rem;
  }

  .p,
  p,
  li {
    font-size: 1.2rem;
    line-height: 2rem;
  }

  .site-header .site-nav {
    display: none;
    width: 100%;
    float: left;
    text-align: left;
    margin-top: 1.5rem;r
    margin-bottom: 2rem;
  }

  .post-link .post-title {
    margin-bottom: 0.2rem;
    font-size: 1.6rem;
  }

  .posts .post {
    padding-bottom: 0.5rem;
  }
}

@media screen and (min-width: 48em) {
  .meta,
  .post-meta {
    margin: 0;
    padding: 0;
    font-size: 1rem;
  }

  .h1,
  h1 {
    font-size: 2.5rem;
    line-height: 2.8rem;
  }

  .h2,
  h2 {
    font-size: 2rem;
  }

  .h3,
  h3 {
    font-size: 1.3rem;
    line-height: 2rem;
  }

  .p,
  p,
  li {
    font-size: 1.35rem;
    line-height: 2.3rem;
  }

  .small {
    font-size: 1rem;
  }

  .post-link .post-title {
    margin-top: 0rem;
  }

  .posts .post {
    margin-bottom: 0rem;
    padding-bottom: 1rem;
    border-bottom: none;
  }

  .posts .post:last-child {
    border-bottom: none;
    padding-bottom: 0;
  }
}

footer {
  border-top: thin solid #f3f3f3;
}

footer,
footer .wrap {
  color: #7a7a7a;
  background-color: #fafafa;
  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
  font-weight: 300;
  clear: both;
}

footer:after {
  content: "";
  display: block;
}

